"results.html is now showing data upon a succesful weather api lookup. Post needs to be modified to check if weather api lookup is successful and send to a new page if not. results.html could use some prettying up."

--- a/src/weather/templates/weather/results.html
+++ b/src/weather/templates/weather/results.html
@@ -2,6 +2,7 @@
 
 
 {% block title %}
+{{ results.0 }}
 {% endblock title %}
 
 {% block styles %}
@@ -9,11 +10,9 @@
 {% endblock styles %}
 
 {% block content %}
-    {% for result in result %}
-        {{ result }}
+    {% for result in results %}
+        {{ result }} 
+        <br>
     {% endfor %}
 {% endblock content %}
 
-{% for result in result %}
-        {{ result }}
-    {% endfor %}
