--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,16 +11,17 @@
     {% block styles %}
     <style>
     body {
-/*        background-color: #631b1b;
-*/        background-image: url('http://musback.com/wp-content/uploads/2880x1800_morning_dew_drops_wallpaper_by_Musback.jpg');
+        background: url('http://musback.com/wp-content/uploads/2880x1800_morning_dew_drops_wallpaper_by_Musback.jpg') no-repeat center center;
         background-size: cover;
+        box-shadow: none;
     }
     </style>
     {% endblock styles %}
     
 </head>
 <body>
-
+{% block navbar %}
+{% endblock navbar %}
 <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
