Fixed some validation issues. Slight code cleanup & file reorganization

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,11 +10,13 @@
 
     {% block styles %}
     <style>
+
     body {
         background: url('http://musback.com/wp-content/uploads/2880x1800_morning_dew_drops_wallpaper_by_Musback.jpg') no-repeat center center;
-        background-size: cover;
+       /* background-size: cover;*/
         box-shadow: none;
     }
+
     </style>
     {% endblock styles %}
     
