--- a/src/weather/templates/weather/search_bar.html
+++ b/src/weather/templates/weather/search_bar.html
@@ -1,3 +1,5 @@
+ {% load crispy_forms_tags %}
+
     <style>
     .navbar-default {
     background: none;
@@ -15,7 +17,9 @@
           <ul class="nav navbar-nav navbar-right">
             <form class="form-inline" method='POST' action='.'> {% csrf_token %}
               <div class="form-group">
-                <input type="text" class="form-control" id="location" name="location" placeholder="Enter Location">
+                {{ form | crispy }}
+                <!-- <input type="text" class="form-control" id="location" name="location" placeholder="Enter Location"> -->
+                
               </div>
               <button type="submit" class="btn btn-default">Search</button>
             </form>
